--- a/AppArduino/AppArduino/Pages/MaterialsPage.xaml
+++ b/AppArduino/AppArduino/Pages/MaterialsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppArduino.MaterialsPage"
-             Title="MaterialsPage">
+             Title="Materiały">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
