--- a/AppArduino/AppArduino/MainPage.xaml
+++ b/AppArduino/AppArduino/MainPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppArduino.MainPage"
-             Title="Miasta Przyszłości - strona główna">
+             Title="Miasta Przyszłości - strona główna"
+             xmlns:viewmodel="clr-namespace:AppArduino.ViewModel"
+             x:DataType="viewmodel:MainViewModel">
 
     <ScrollView>
         <VerticalStackLayout
