--- a/AppArduino/AppArduino/Pages/WaterPage.xaml
+++ b/AppArduino/AppArduino/Pages/WaterPage.xaml
@@ -2,29 +2,19 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppArduino.WaterPage"
-             Title="Woda">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Button
-                 Text="Poziom 1"
-                 Clicked="OnTableListPage"
-                HorizontalOptions="Center" />
-        <Label 
-            Text="Opis poziomu pierwszego"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        
-        <Button
-                 Text="Poziom 2"
-                 Clicked="OnLevel1_WaterPage"
-                HorizontalOptions="Center" />
+             Title="Woda"
+             >
 
-        <Button
-                 Text="Powrót"
-                 Clicked="OnLevel2_WaterPage"
-                HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Grid RowDefinitions="*,*,*" ColumnDefinitions="*,2*">
+        <Button Grid.Row="0" Grid.Column="0" BackgroundColor="White" Text="Poziom 1" Clicked="OnLevel1_WaterPage"/>
+        <Button Grid.Row="0" Grid.Column="1" BackgroundColor="Pink" Text="Schmeat wypełniony częscią bloków"/>
+        <Button Grid.Row="1" Grid.Column="0" BackgroundColor="White" Text="Poziom 2" Clicked="OnLevel2_WaterPage"/>
+        <Button Grid.Row="1" Grid.Column="1" BackgroundColor="Pink" Text=" Wszystkie bloki do uzupełnienia"/>
+        <Button Grid.Row="2" Grid.Column="0" BackgroundColor="White" Text="Poziom 3"/>
+        <Button Grid.Row="2" Grid.Column="0" BackgroundColor="White" Text="Poziom 3"/>
+        <Button Grid.Row="2" Grid.Column="1" BackgroundColor="Pink" Text="Osobny wybór bloków i opisu (kjak starczy czasu)"/>
+
+
+    </Grid>
+    
 </ContentPage>
