create new folder level 1 in water page , create all folder for pages

--- a/AppArduino/AppArduino/Pages/Water/WaterPage.xaml
+++ b/AppArduino/AppArduino/Pages/Water/WaterPage.xaml
@@ -7,14 +7,11 @@
 
     <Grid RowDefinitions="*,*,*" ColumnDefinitions="*,2*">
         <Button Grid.Row="0" Grid.Column="0" BackgroundColor="White" Text="Poziom 1" Clicked="OnLevel1_WaterPage"/>
-        <Button Grid.Row="0" Grid.Column="1" BackgroundColor="Pink" Text="Schmeat wypełniony częscią bloków"/>
+        <Button Grid.Row="0" Grid.Column="1" BackgroundColor="Pink" Text="Schemat wypełniony częscią bloków"/>
         <Button Grid.Row="1" Grid.Column="0" BackgroundColor="White" Text="Poziom 2" Clicked="OnLevel2_WaterPage"/>
         <Button Grid.Row="1" Grid.Column="1" BackgroundColor="Pink" Text=" Wszystkie bloki do uzupełnienia"/>
         <Button Grid.Row="2" Grid.Column="0" BackgroundColor="White" Text="Poziom 3"/>
-        <Button Grid.Row="2" Grid.Column="0" BackgroundColor="White" Text="Poziom 3"/>
-        <Button Grid.Row="2" Grid.Column="1" BackgroundColor="Pink" Text="Osobny wybór bloków i opisu (kjak starczy czasu)"/>
-
-
+        <Button Grid.Row="2" Grid.Column="1" BackgroundColor="Pink" Text="Osobny wybór bloków i opisu (jak starczy czasu)"/>
     </Grid>
     
 </ContentPage>
